--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -1,7 +1,5 @@
-# This file contains the config for the EnderXY 3D printer.
-# 2020 Ender3 4.2.2 mainboard
-# I've tested this config on an Ender 3 with a 4.2.2 mainboard, with both the stm32f103 and gd32f103 chips.
-# To use this config, during "make menuconfig" select the
+# This file contains pin mappings for the stock 2020 Creality Ender 3
+# V2. To use this config, during "make menuconfig" select the
 # STM32F103 with a "28KiB bootloader" and serial (on USART1 PA10/PA9)
 # communication.
 
@@ -17,10 +15,8 @@
 # that was flashed.
 
 # See docs/Config_Reference.md for a description of parameters.
-
-# Comment out if not using mainsail
 [include mainsail.cfg]
-
+[include lis2dw-v1.0.cfg]
 [stepper_x]
 step_pin: PC2
 dir_pin: !PB9
@@ -50,7 +46,7 @@ enable_pin: !PC3
 microsteps: 16
 rotation_distance: 8
 endstop_pin: ^PA7
-position_endstop: -2.85
+#position_endstop: -2.85
 position_max: 200
 position_min: -3
 
@@ -86,6 +82,14 @@ pid_Kd: 948.182
 min_temp: 0
 max_temp: 130
 
+#####################################################################
+#   Input Shaping
+#####################################################################
+[input_shaper]
+shaper_freq_x: 82.6 
+shaper_freq_y: 63.6 
+shaper_type: zv
+
 [fan]
 pin: PA0
 
@@ -96,6 +100,12 @@ restart_method: command
 [printer]
 kinematics: corexy
 max_velocity: 300
-max_accel: 4000
+max_accel: 6000
 max_z_velocity: 20
 max_z_accel: 100
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [stepper_z]
+#*# position_endstop = -2.800
