--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -15,8 +15,10 @@
 # that was flashed.
 
 # See docs/Config_Reference.md for a description of parameters.
-[include mainsail.cfg]
-[include lis2dw-v1.0.cfg]
+
+#Uncomment if using mainsail
+#[include mainsail.cfg]
+
 [stepper_x]
 step_pin: PC2
 dir_pin: !PB9
@@ -30,7 +32,7 @@ homing_speed: 50
 
 [stepper_y]
 step_pin: PB8
-dir_pin: !PB7
+dir_pin: PB7
 enable_pin: !PC3
 microsteps: 16
 rotation_distance: 40
@@ -46,9 +48,9 @@ enable_pin: !PC3
 microsteps: 16
 rotation_distance: 8
 endstop_pin: ^PA7
-#position_endstop: -2.85
+position_endstop: -1.5
 position_max: 200
-position_min: -3
+position_min: -4
 
 [extruder]
 max_extrude_only_distance: 100.0
@@ -68,7 +70,7 @@ pid_Kp: 21.527
 pid_Ki: 1.063
 pid_Kd: 108.982
 min_temp: 0
-max_temp: 250
+max_temp: 270
 
 [heater_bed]
 heater_pin: PA2
@@ -81,14 +83,6 @@ pid_Ki: 0.770
 pid_Kd: 948.182
 min_temp: 0
 max_temp: 130
-
-#####################################################################
-#   Input Shaping
-#####################################################################
-[input_shaper]
-shaper_freq_x: 82.6 
-shaper_freq_y: 63.6 
-shaper_type: zv
 
 [fan]
 pin: PA0
@@ -104,8 +98,3 @@ max_accel: 6000
 max_z_velocity: 20
 max_z_accel: 100
 
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [stepper_z]
-#*# position_endstop = -2.800
