add safe z to config

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -52,6 +52,15 @@ position_endstop: -1.5
 position_max: 200
 position_min: -4
 
+[safe_z_home]
+##  XY Location of the Z Endstop Switch
+##  Update -10,-10 to the XY coordinates of your endstop pin 
+##  (such as 157,305) after going through Z Endstop Pin
+##  Location Definition step.
+home_xy_position:93,180
+speed:100
+z_hop:10
+
 [extruder]
 max_extrude_only_distance: 100.0
 step_pin: PB4
