add printer config, z endstop

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -53,10 +53,7 @@ position_max: 200
 position_min: -4
 
 [safe_z_home]
-##  XY Location of the Z Endstop Switch
-##  Update -10,-10 to the XY coordinates of your endstop pin 
-##  (such as 157,305) after going through Z Endstop Pin
-##  Location Definition step.
+##  XY Location of the Z Endstop Switch, You need to verify and adjust this value!!!!!!!!!!!!!!!!
 home_xy_position:93,180
 speed:100
 z_hop:10
@@ -107,3 +104,20 @@ max_accel: 6000
 max_z_velocity: 20
 max_z_accel: 100
 
+
+# Uncomment the following lines to use the factory 12864 LCD display
+# [display]
+# lcd_type: st7920
+# cs_pin: EXP1_7
+# sclk_pin: EXP1_6
+# sid_pin: EXP1_8
+# encoder_pins: ^EXP1_5, ^EXP1_3
+# click_pin: ^!EXP1_2
+
+
+
+# [board_pins]
+# aliases:
+#     # EXP1 header
+#     EXP1_1=PB5,  EXP1_3=PA9,   EXP1_5=PA10, EXP1_7=PB8,  EXP1_9=<GND>,
+#     EXP1_2=PA15, EXP1_4=<RST>, EXP1_6=PB9,  EXP1_8=PB15, EXP1_10=<5V>
